--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,7 +32,7 @@
             android:id="@+id/edtPassword"
             android:hint="Password"
             android:textColorHint="@color/colorPrimary"
-            android:text="1234"
+            android:text=""
             android:textSize="34dp"
             android:textColor="#000000"
             android:inputType="textPassword"
@@ -42,6 +42,24 @@
             app:met_singleLineEllipsis="true"/>
 
 
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <CheckBox
+            android:id="@+id/ckbRemember"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:outlineAmbientShadowColor="@color/colorPrimary"
+            android:outlineSpotShadowColor="@color/colorAccent"
+            android:layout_marginTop="450dp"
+            android:paddingLeft="10dp"
+            android:text="Recodarme"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
